# conan_test_tiff

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py
src/app/stufftool/: CMakeLists.txt  stufftool.cpp
src/lib/stuff/: CMakeLists.txt  stuff.cpp
src/lib/stuff/include/: stuff.h
test_package/: CMakeLists.txt  conanfile.py  stufftestpkg.cpp
